Add JavaScript and HTML updates per assignment.

--- a/BasicHTML1.html
+++ b/BasicHTML1.html
@@ -12,7 +12,10 @@
     
     <button onclick="MyFirstFunction()" id="GreenText">
         Click me!
+
     </button>
+
+    <p id="GreenText"></p>
 
 
 
