--- a/BasicHTML2.html
+++ b/BasicHTML2.html
@@ -14,6 +14,12 @@
 
     <p id="Concatenate" onclick="MyFunction()">hey</p>
 
+
+    <button id ="MakeAMan" onclick="NewFunction()">
+        what makes a man?
+
+    </button>
+
     
 
   
