Add Assignments up to page 135

--- a/BasicHTML5.html
+++ b/BasicHTML5.html
@@ -17,5 +17,10 @@
         <p id="Not" onclick="NotTest()">Not test</p>
 
         <p id="NotFalse" onclick="NotTestTrue()">Not False</p>
+
+        <p>Riders must be at least 52 centimeters tall to ride</p>
+        <input id="Height" value="52" />
+        <button onclick="RideFunction()">Click here!</button>
+        <p id="Ride"></p>
     </body>
 </html>
